--- a/css/global/_config.scss
+++ b/css/global/_config.scss
@@ -1,46 +1,26 @@
-@font-face {
-  font-family: 'Source Sans';
-  src: url('../res/font/SourceSansPro-Regular.eot');
-  src: url('../res/font/SourceSansPro-Regular.eot?#iefix') format('embedded-opentype'),
-    url('../res/font/SourceSansPro-Regular.woff2') format('woff2'),
-    url('../res/font/SourceSansPro-Regular.woff') format('woff'),
-    url('../res/font/SourceSansPro-Regular.ttf') format('truetype'),
-    url('../res/font/SourceSansPro-Regular.svg#SourceSansPro-Regular') format('svg');
-  font-weight: initial;
-  font-style: initial;
-}
+@import "mixin";
+@import "valuable";
+
 
 @keyframes spin {
   0% { 
     transform: rotate(0deg);
-    background-color: $yellow-color-blur;
-  }
-
-  25% {
-    background-color: $red-color-blur;
-  }
-
-  50% {
-    background-color: $black-color-blur;
   }
   100% {
     transform: rotate(360deg);
-    background-color: $yellow-color-blur;
   }
 }
 
 .loading {
   @include abCenter(50%, 50%);
-  transform: translate(-100%, -100%);
   margin: -100px 0 0 -100px;
   padding: 100px;
   border-radius: 100%;
-  color: $white-color;
 
-  border-top: 16px solid $white-color;
-  border-right: 16px solid $black-color;
-  border-bottom: 16px solid $yellow-color;
-  border-left: 16px solid $red-color;
+  // border-top: 16px solid $white-color;
+  // border-right: 16px solid $black-color;
+  // border-bottom: 16px solid $yellow-color;
+  // border-left: 16px solid $red-color;
   animation: spin 2s linear infinite;
   overflow: hidden;
   z-index: 9999999;
@@ -55,32 +35,28 @@ html {
 }
 
 body {
-  font-family: 'Source Sans', Cambria, Arial;
-  background-color: $white-color;
+  font-family: Cambria, Arial;
+  background-color: #fff;
   overflow-x: hidden;
-  font-size: 15px;
-  line-height: 1.5;
+  font-size: $font-size;
+  line-height: 1.4;
 
   &::-webkit-scrollbar-thumb {
-    @include gradient;
+    background-color: $green-color-blur;
   }
 
   &::-webkit-scrollbar,
   &::-webkit-scrollbar-track {
-    background-color: $white-color;
+    background-color: #fff;
   }
 
   &::-webkit-scrollbar {
-    width: 10px;
+    width: .8vw;
   }
 }
 
 ul {
   margin-bottom: 0;
-}
-
-p {
-  padding: 1rem 0 0 0;
 }
 
 h4 {
