--- a/css/global/_valuable.scss
+++ b/css/global/_valuable.scss
@@ -1,16 +1,11 @@
 // color =============================
-$red-color: #af223c;
-$red-color-blur: #af223cc0;
-$black-color: #333;
-$black-color-blur: #333333c4;
-$yellow-color: #f0da0e;
-$yellow-color-blur: #f0d90ead;
-$white-color: #ffffff;
-$scroll-bar-color: rgb(216, 193, 164);
-$border-color: #851328fb;
-
+$green-color: #0c9b13;
+$green-color-blur: #0c9b13ce;
+$black-color: #2a2a2a;
+$black-color-blur: #2a2a2ace;
+$white-color-blur: #ffffffbb;
 // size ==============================
 $font-size: 15px;
 
 // font ==============================
-$font: 'Source Sans', Cambria;
+$font: Cambria;
