--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ input:focus {
   background-color: #ffffffbb;
   padding: .6rem 0;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
 }
 
 .header-nav > .wrap {
@@ -718,11 +718,12 @@ input:focus {
   margin-bottom: 10px;
   font-weight: bold;
   font-size: 37.5px;
-  text-align: justify;
+  text-align: center;
 }
 
 .banner-slogan-txt.smaller {
   font-weight: normal;
+  text-align: justify;
   font-size: 19.5px;
 }
 
@@ -742,5 +743,171 @@ input:focus {
   .banner-slogan-txt.smaller {
     font-size: 15px;
   }
+}
+
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  margin: -100px 0 0 -100px;
+  padding: 100px;
+  border-radius: 100%;
+  -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
+  overflow: hidden;
+  z-index: 9999999;
+}
+
+.loading * {
+  display: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: Cambria, Arial;
+  background-color: #fff;
+  overflow-x: hidden;
+  font-size: 15px;
+  line-height: 1.4;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #0c9b13ce;
+}
+
+body::-webkit-scrollbar, body::-webkit-scrollbar-track {
+  background-color: #fff;
+}
+
+body::-webkit-scrollbar {
+  width: .8vw;
+}
+
+ul {
+  margin-bottom: 0;
+}
+
+h4 {
+  margin-bottom: 2rem;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+input {
+  border: 0;
+}
+
+input:focus {
+  outline: 0;
+}
+
+.wrap {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  .wrap {
+    max-width: 100%;
+  }
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#footer {
+  display: block;
+  background-color: #0c9b13;
+  color: #fff;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+      align-items: center;
+  padding: 1rem;
+}
+
+.social + p {
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.social li {
+  padding: 0 10px;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+
+.social li:hover {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+}
+
+.social a {
+  font-size: 30px;
+}
+
+.up-btn.line {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.431);
+  height: 21px;
+  margin-bottom: 22px;
+}
+
+.up-btn > a {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  background-color: #fff;
+  color: #0c9b13;
+  text-align: center;
+  display: table;
+  padding: 10px 15px;
+  margin: auto;
+  clear: both;
+}
+
+.up-btn > a:hover {
+  background-color: #0c9b13;
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.copyright {
+  text-align: center;
+  padding: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
