--- a/css/style.css
+++ b/css/style.css
@@ -255,25 +255,6 @@ input[type=button] {
   }
 }
 
-.loading {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-          transform: translateX(-50%) translateY(-50%);
-  margin: -100px 0 0 -100px;
-  padding: 100px;
-  border-radius: 100%;
-  -webkit-animation: spin 2s linear infinite;
-          animation: spin 2s linear infinite;
-  overflow: hidden;
-  z-index: 9999999;
-}
-
-.loading * {
-  display: none;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -343,25 +324,6 @@ input:focus {
   }
 }
 
-.loading {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-          transform: translateX(-50%) translateY(-50%);
-  margin: -100px 0 0 -100px;
-  padding: 100px;
-  border-radius: 100%;
-  -webkit-animation: spin 2s linear infinite;
-          animation: spin 2s linear infinite;
-  overflow: hidden;
-  z-index: 9999999;
-}
-
-.loading * {
-  display: none;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -415,6 +377,11 @@ input:focus {
   .wrap {
     max-width: 100%;
   }
+}
+
+.rotate {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 #header {
@@ -509,6 +476,8 @@ input:focus {
   display: none;
   color: #0c9b13;
   font-weight: bold;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
 }
 
 @media (max-width: 768px) {
@@ -560,7 +529,7 @@ input:focus {
   .header-nav .logo {
     width: 100%;
   }
-  .header-nav .logo * {
+  .header-nav .logo > * {
     -webkit-transform: scale(0.8);
             transform: scale(0.8);
   }
@@ -655,6 +624,7 @@ input:focus {
 }
 
 .search-form {
+  margin-left: 10px;
   -webkit-box-ordinal-group: 2;
       -ms-flex-order: 1;
           order: 1;
@@ -758,25 +728,6 @@ input:focus {
   }
 }
 
-.loading {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-          transform: translateX(-50%) translateY(-50%);
-  margin: -100px 0 0 -100px;
-  padding: 100px;
-  border-radius: 100%;
-  -webkit-animation: spin 2s linear infinite;
-          animation: spin 2s linear infinite;
-  overflow: hidden;
-  z-index: 9999999;
-}
-
-.loading * {
-  display: none;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -864,7 +815,6 @@ a {
   font-weight: bold;
   font-size: 1.2rem;
   text-align: center;
-  margin-bottom: 1rem;
 }
 
 .social li {
@@ -880,6 +830,12 @@ a {
 
 .social a {
   font-size: 30px;
+}
+
+.address {
+  display: block;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .up-btn.line {
@@ -909,5 +865,382 @@ a {
 .copyright {
   text-align: center;
   padding: 1rem;
+}
+
+/******************
+** MAIN CONFIG
+*******************/
+.main-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  color: #0c9b13;
+  padding: 3rem 0;
+}
+
+.main-section-title {
+  text-align: center;
+  font-size: 30px;
+  text-transform: uppercase;
+  margin: 1rem .5rem;
+}
+
+.wrap {
+  overflow: hidden;
+}
+
+/******************
+** TINH DAU
+*******************/
+#tinhdau {
+  background: url(../res/img/whiteflower.jpg) no-repeat center/cover fixed;
+}
+
+#tinhdau .end {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+#tinhdau .end .group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+#tinhdau .end .group > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+      align-items: center;
+  width: 60%;
+  margin: 1.5rem;
+  text-align: center;
+}
+
+#tinhdau .end .group > div img {
+  width: 30%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+#tinhdau .end .group > div span {
+  margin-top: 10px;
+}
+
+#tinhdau .end .group > div :hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+  #tinhdau .end {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+        align-items: center;
+  }
+  #tinhdau .end .group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+        flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+        align-items: center;
+  }
+  #tinhdau .end .group > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+        align-items: center;
+  }
+}
+
+/******************
+** GIOI THIEU
+*******************/
+#gioithieu {
+  font-size: 19.5px;
+}
+
+#gioithieu > .wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+      flex-direction: row;
+}
+
+@media (max-width: 768px) {
+  #gioithieu > .wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+        align-items: center;
+  }
+  #gioithieu .intro {
+    width: 100%;
+  }
+  #gioithieu .intro::after {
+    background: url(../res/img/83.jpg) no-repeat center/100% fixed;
+  }
+  #gioithieu .feature {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    width: 50%;
+  }
+  #gioithieu .feature img {
+    width: 30%;
+    margin-right: 2rem;
+  }
+}
+
+.intro {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  display: block;
+  width: 65%;
+  padding: 4rem 2rem;
+  text-align: justify;
+}
+
+.intro:hover {
+  background-color: #ffffffbb;
+}
+
+.intro::after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  content: '';
+  background: url(../res/img/83.jpg) no-repeat center/cover;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.feature {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  width: 35%;
+}
+
+.feature-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+      align-items: center;
+  width: 100%;
+  margin: 1rem;
+}
+
+.feature-item img {
+  width: 20%;
+  margin-right: 2rem;
+}
+
+/******************
+** SAN PHAM
+*******************/
+#sanpham {
+  background-color: #aaaaaa28;
+}
+
+.slide {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  overflow: hidden;
+  width: 2380px;
+  position: relative;
+}
+
+.slide-item {
+  margin: 0 20px;
+  position: relative;
+}
+
+.slide-item img {
+  width: 300px;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-box-shadow: 0 0 3px 0 #050505a4;
+          box-shadow: 0 0 3px 0 #050505a4;
+}
+
+.slide-item .back {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  position: absolute;
+  color: #0c9b13;
+  opacity: 0;
+  z-index: 1;
+}
+
+.slide-item .back h5 {
+  margin: 10px 0;
+  text-align: center;
+  font-size: 22.5px;
+}
+
+.slide-item .back:hover {
+  opacity: 1;
+  background-color: #ffffffbb;
+}
+
+.slide-btn {
+  display: table;
+  margin: 10px auto;
+}
+
+.btn {
+  border: 0;
+  outline: 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-color: #0c9b13;
+  color: #fff;
+  font-size: 40px;
+  border-radius: 50%;
+  margin: 1rem;
+}
+
+.btn:hover {
+  background-color: #0c9b13ce;
+}
+
+/******************
+** DAM BAO
+*******************/
+#dambao .wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-between;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+#dambao .cer-container {
+  width: 25%;
+}
+
+#dambao .cer-container img {
+  width: 80%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 /*# sourceMappingURL=style.css.map */
