--- a/css/style.scss
+++ b/css/style.scss
@@ -4,3 +4,245 @@
 @import "global/mixin";
 @import "header/header";
 @import "footer/footer";
+
+/******************
+** MAIN CONFIG
+*******************/
+.main-section {
+  @include flex(column, null, null);
+  color: $green-color;
+  padding: 3rem 0;
+
+  &-title {
+    text-align: center;
+    font-size: $font-size* 2;
+    text-transform: uppercase;
+    margin: 1rem .5rem;
+  }
+}
+
+.wrap {
+  overflow: hidden;
+}
+
+/******************
+** TINH DAU
+*******************/
+#tinhdau {
+
+  background: url(../res/img/whiteflower.jpg) no-repeat center/ cover fixed;
+
+  .end {
+    @include flex(row, center, center);
+    .group {
+      @include flex(column, center, center); 
+
+      &>div {
+        @include flex(column, center, null);
+        width: 60%;
+        margin: 1.5rem;
+        text-align: center;
+
+        img {
+          width: 30%;
+          object-fit: cover;
+          @include trans(.2s);
+        }
+
+        span {
+          margin-top: 10px;
+        }
+
+        :hover {
+          transform: scale(1.1);
+        }
+      }
+
+    }
+  }
+
+  @include breakpoint(tablet) {
+
+    .end {
+      width: 100%;
+      @include flex(column, center, center);
+      
+      .group {
+        @include flex(row, center, center);
+
+        &>div {
+          @include flex(column, center, center);
+        }
+      }
+    }
+  }
+}
+
+/******************
+** GIOI THIEU
+*******************/
+#gioithieu {
+  font-size: $font-size * 1.3;
+  &>.wrap {
+    @include flex(row, null, null);
+  }
+
+  @include breakpoint(tablet) {
+
+    &>.wrap {
+      @include flex(column, center, center);
+    }
+
+    .intro {
+      width: 100%;
+
+      &::after {
+        background: url(../res/img/83.jpg) no-repeat center/ 100% fixed;
+      }
+    }
+
+    .feature {
+      @include flex (column, null, center);
+      width: 50%;
+
+      img {
+        width: 30%;
+        margin-right: 2rem;
+      }
+    }
+
+  }
+}
+
+.intro {
+  @include trans(.2s);
+  position: relative;
+  display: block;
+  width: 65%;
+  padding: 4rem 2rem;
+  text-align: justify;
+
+  &:hover {
+    background-color: $white-color-blur;
+  }
+
+  &::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    content: '';
+    background: url(../res/img/83.jpg) no-repeat center/ cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+}
+
+.feature {
+  @include flex (column, null, null);
+  width: 35%;
+
+  &-item {
+    @include flex (row, center, null);
+    width: 100%;
+    margin: 1rem;
+    
+
+    img {
+      width: 20%;
+      margin-right: 2rem;
+    }
+  }
+}
+
+/******************
+** SAN PHAM
+*******************/
+#sanpham {
+  background-color: #aaaaaa28;
+}
+
+$img-width: 300px;
+.slide {
+  @include trans(.3s);
+  @include flex(row, null, center);
+  flex-wrap: nowrap;
+  overflow: hidden;
+  width: ($img-width + 40) * 7;
+  position: relative;
+  // transform: translateX(-$img-width - 40px);
+  // box-shadow: 0 0 3px 0 ;
+
+  &-item {
+    margin: 0 20px;
+    position: relative;
+    // overflow-x: hidden;
+    img {
+      width: $img-width;
+      height: $img-width;
+      object-fit: cover;
+      box-shadow: 0 0 3px 0 #050505a4;
+    }
+
+    .back {
+      @include trans(.2s);
+      width: 100%;
+      height: 100%;
+      padding: 10px;
+      position: absolute;
+      color: $green-color;
+      opacity: 0;
+      z-index: 1;
+
+      h5 {
+        margin: 10px 0;
+        text-align: center;
+        font-size: $font-size * 1.5;
+      }
+
+      &:hover {
+        opacity: 1;
+        background-color: $white-color-blur;
+      }
+    }
+  }
+}
+
+.slide-btn {
+  display: table;
+  margin: 10px auto;
+}
+
+.btn {
+  border: 0;
+  outline: 0;
+  user-select: none;
+  background-color: $green-color;
+  color: #fff;
+  font-size: 40px;
+  border-radius: 50%;
+  margin: 1rem;
+
+  &:hover {
+    background-color: $green-color-blur;
+  }
+}
+
+/******************
+** DAM BAO
+*******************/
+#dambao {
+
+  .wrap {
+    @include flex(row, center, space-between);
+  }
+
+  .cer-container {
+    width: 25%;
+
+    img {
+      width: 80%;
+      object-fit: cover;
+    }
+  }
+}
