--- a/css/global/_config.scss
+++ b/css/global/_config.scss
@@ -11,6 +11,21 @@
   }
 }
 
+@keyframes appearBottom {
+  0% { 
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+[delay-bottom] {
+  opacity: 0;
+}
+
 // .loading {
 //   @include abCenter(50%, 50%);
 //   margin: -50px 0 0 -50px;
