--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,36 @@ input[type=button] {
   }
 }
 
+@-webkit-keyframes appearBottom {
+  0% {
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes appearBottom {
+  0% {
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+[delay-bottom] {
+  opacity: 0;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -322,6 +352,23 @@ input:focus {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
+}
+
+@keyframes appearBottom {
+  0% {
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+[delay-bottom] {
+  opacity: 0;
 }
 
 html {
@@ -726,6 +773,23 @@ input:focus {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
+}
+
+@keyframes appearBottom {
+  0% {
+    -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+[delay-bottom] {
+  opacity: 0;
 }
 
 html {
